# starknet-eth-trading-agent

./: .env.example  .gitignore  README.md  action_agent.py  addresses.py  avnu_helpers.py  model_training.py  pyproject.toml  requirements.txt
