[tool.poetry]
name = "starknet-eth-trading-agent"
version = "0.1.0"
description = "On-chain ETH trading strategy agent deployed on starknet mainnet | Built using Giza SDK"
authors = ["Harsh Tyagi <writetoharshtyagi@gmail.com>", "Yashasvi Chaudhary <writetoyshv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
torch = "^2.3.0"
yfinance = "^0.2.40"
giza-sdk = "^0.1.1"
scikit-learn = "^1.4.2"
pandas = "^1.5.3"
numpy = "^1.26.4"
starknet-py="0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
